# synthetic-data-guardian

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitattributes  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  .prettierrc  .pylintrc  .releaserc.json  .secrets.baseline  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CHECKPOINTED_SDLC_IMPLEMENTATION_SUMMARY.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_USAGE_EXAMPLES.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.production  EXECUTION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  README_SDLC.md  SDLC_IMPLEMENTATION_GUIDE.md  SDLC_IMPLEMENTATION_SUMMARY.md  (+61 more)
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_vulnerability.md
.github/workflows/: ci.yml  release.yml  security.yml
.husky/: commit-msg  pre-commit  pre-push
.husky/_/: husky.sh
.terragon/: README.md  scheduler.js  value-backlog.json  value-config.yaml  value-discovery.js  value-metrics.json  work-items.json
automation/: integration-config.json  metrics-config.json  performance-config.json  repository-health.py
data/: monitoring_config.json  performance_config.json  research_config.json  security_config.json
deployment/: Dockerfile.production  terragon_sdlc_completion_summary.json
deployment/config/: .env.production  production.json
deployment/kubernetes/: terragon-deployment.yaml
deployment/scripts/: deploy.sh  health-check.sh  rollback.sh
docs/: DEVELOPMENT.md  FINAL_SETUP_INSTRUCTIONS.md  ROADMAP.md  SDLC_MATURITY_REPORT.md  SETUP_REQUIRED.md  WORKFLOW_SETUP_INSTRUCTIONS.md
docs/adr/: 0001-architecture-decisions.md  0002-security-and-privacy.md  0003-sdlc-checkpointed-implementation.md  README.md  template.md
docs/automation/: dependency-management.md
docs/compliance/: slsa-compliance.md  slsa-level3-implementation.md
docs/deployment/: README.md
docs/guides/: getting-started.md
docs/monitoring/: observability-stack.md  opentelemetry-setup.md
docs/security/: advanced-security-configuration.md  sbom-generation.md
docs/testing/: README.md
docs/workflows/: COMPREHENSIVE_WORKFLOW_GUIDE.md  MANUAL_SETUP_GUIDE.md  README.md  WORKFLOW_SETUP_GUIDE.md  WORKFLOW_SETUP_INSTRUCTIONS.md  autonomous-sdlc-workflow.yml  ci-cd-requirements.md  ci-workflow-template.yml  performance-workflow-template.yml  security-workflow-template.yml
docs/workflows/examples/: ci-comprehensive-template.yml  dependency-update-workflow.yml  deployment-workflow.yml  security-comprehensive-template.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml  recording_rules.yml
output/: generation_089dc94b_1756182798.json  generation_17c5a736_1756182798.json  generation_8db8f1d0_1756182798.json  generation_a1ba05e6_1756182798.json
quality_gates_results/: comprehensive_quality_gates_report.json  executive_summary.json  quality_gates_summary.json
scripts/: automated-metrics-collector.py  automation-scheduler.sh  build.sh  dependency-update-automation.sh  dev-setup.sh  docker-entrypoint.sh  docker-security-scan.sh  integration-tester.py  metrics-collector.py  performance-benchmarker.py  release.sh  setup.sh  tech-debt-tracker.py
src/: index.js
src/analysis/: PrivacyAnalysis.js  QualityAssessment.js
src/cache/: CacheManager.js
src/cli/: commands.js
src/compliance/: gdpr.js
src/core/: GenerationPipeline.js  Guardian.js  LineageTracker.js  ValidationEngine.js  WatermarkEngine.js
src/database/: connection.js
src/database/migrations/: 001_create_core_tables.sql
src/database/seeds/: default_pipelines.js
src/generators/: GraphGenerator.js  ImageGenerator.js  TabularGenerator.js  TextGenerator.js  TimeSeriesGenerator.js
src/health/: HealthChecker.js
src/i18n/locales/: en.json
src/middleware/: ErrorHandler.js  InputValidator.js  RateLimiter.js  Security.js  errorHandler.js  metrics.js  metrics.ts  validation.js
src/optimization/: CacheManager.js  LoadBalancer.js  PerformanceOptimizer.js  ResourceManager.js  worker.js
src/repositories/: BaseRepository.js  PipelineRepository.js
src/routes/: api.js  health.js  health.ts
src/sdlc/: __init__.py  autonomous_executor.py  deployment_engine.py  monitoring_engine.py  orchestrator.py  performance_engine.py  progressive_enhancer.py  quality_gates_engine.py  security_engine.py
src/synthetic_guardian/: __init__.py  cli.py  config.py
src/synthetic_guardian/core/: guardian.py  health_checker.py  pipeline.py  result.py  simple_guardian.py  validation_report.py
src/utils/: Logger.js
synthetic_data_guardian/: __init__.py  app.py  generator.py  lineage.py  validator.py  watermark.py
terragon_output/: generation1_execution_report.json  generation2_robustness_report.json  generation3_scaling_report.json  generation_384caa7e_1756182231.json  generation_594e1cd6_1756182231.json  generation_a7cb3688_1756182231.json  generation_ac2e0f17_1756182231.json
tests/: conftest.py  setup.ts  test_guardian.py  test_suite.py
tests/config/: advanced-test-config.ts  test-config.ts
tests/contract/: contract.test.ts
tests/e2e/: example.e2e.test.ts  global-setup.ts  global-teardown.ts  test_api_e2e.py
tests/fixtures/: test-data.ts
tests/helpers/: test-helpers.ts
tests/integration/: example.integration.test.ts  setup.ts  test_example_integration.py
tests/performance/: advanced-load-test.js  load-test.js
tests/python/: conftest.py  test_config.py  test_performance.py  test_utils.py
tests/security/: comprehensive-security-tests.py  security_tests.py
tests/unit/: example.test.ts  test_example.py
tests/utils/: test-utils.ts  test_utilities.py
(+44 files in other folders)
